--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
+    "express-session": "^1.17.0",
     "helmet": "^3.21.1",
     "knex": "^0.19.5",
     "nodemon": "^1.19.3",
